--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JMS Coding Club</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="admin/thesheet.css" rel="stylesheet">
     <style>
         body {
             margin: 0;
@@ -183,7 +184,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container anim">
         <h1>Welcome to JMS Coding Club!</h1>
         <p>This is where I type what the Club is about</p>
 </body>
