get trolled colin

--- a/index.html
+++ b/index.html
@@ -154,28 +154,29 @@
     </style>
 </head>
 <body>
-    <div class="banner">
+    hehe
+    <div class="banner anim">
         <p>JMS Coding Club</p>
         <div class="dropdown-container-in-banner">
-            <select>
+            <select class="anim">
                 <option value="">Projects</option>
                 <option value="Our Current Project">Our Current Project</option>
                 <option value="Python Fundamentals">Python Fundamentals</option>
                 <option value="Past Projects">Past Projects</option>
             </select>
 
-            <select>
+            <select class="anim">
                 <option value="">About Us</option>
                 <option value="mission">What Are We Doing</option>
                 <option value="team">Our Team</option>
             </select>
 
-            <select>
+            <select class="anim">
                 <option value="">Contact Us</option>
                 <option value="contacts">Contacts</option>
             </select>
 
-            <select>
+            <select class="anim">
                 <option value="">Resources</option>
                 <option value="Our Current Project">Calender</option>
                 <option value="Python Compiler">Chat</option>
