--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     </style>
 </head>
 <body>
-    hehe
+    hehe get trolled
     <div class="banner anim">
         <p>JMS Coding Club</p>
         <div class="dropdown-container-in-banner">
