no more mistake

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JMS Coding Club</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link href="admin/thesheet.css" rel="stylesheet">
+    <!-- <link href="admin/thesheet.css" rel="stylesheet"> -->
     <style>
         body {
             margin: 0;
@@ -154,29 +154,28 @@
     </style>
 </head>
 <body>
-    hehe get trolled
-    <div class="banner anim">
+    <div class="banner">
         <p>JMS Coding Club</p>
         <div class="dropdown-container-in-banner">
-            <select class="anim">
+            <select class="">
                 <option value="">Projects</option>
                 <option value="Our Current Project">Our Current Project</option>
                 <option value="Python Fundamentals">Python Fundamentals</option>
                 <option value="Past Projects">Past Projects</option>
             </select>
 
-            <select class="anim">
+            <select class="">
                 <option value="">About Us</option>
                 <option value="mission">What Are We Doing</option>
                 <option value="team">Our Team</option>
             </select>
 
-            <select class="anim">
+            <select class="">
                 <option value="">Contact Us</option>
                 <option value="contacts">Contacts</option>
             </select>
 
-            <select class="anim">
+            <select class="">
                 <option value="">Resources</option>
                 <option value="Our Current Project">Calender</option>
                 <option value="Python Compiler">Chat</option>
@@ -185,7 +184,7 @@
         </div>
     </div>
 
-    <div class="container anim">
+    <div class="container ">
         <h1>Welcome to JMS Coding Club!</h1>
         <p>This is where I type what the Club is about</p>
 </body>
