Update navbar for 404.html.

--- a/404.html
+++ b/404.html
@@ -259,26 +259,26 @@
         <a class="logo" href="index.html">JMS Coding Club</a>
         <div class="nav-items">
             <div class="dropdown">
-                <a href="404.html">About Us ▾</a>
+                <a>About Us ▾</a>
                 <div class="dropdown-content">
-                    <a href="404.html">What We're Doing</a>
-                    <a href="404.html">Our Team</a>
+                    <a href="about_club.html">What We're Doing</a>
+                    <a href="about-us.html">Our Team</a>
                 </div>
             </div>
             <div class="dropdown">
                 <a>Projects ▾</a>
                 <div class="dropdown-content">
-                    <a href="404.html">Our Current Project</a>
-                    <a href="404.html">Python Fundamentals</a>
-                    <a href="404.html">Past Projects</a>
+                    <a href="current_project.html">Our Current Project</a>
+                    <a href="python_fundementals.html">Python Fundamentals</a>
+                    <a href="past_projects.html">Past Projects</a>
                 </div>
             </div>
             <div class="dropdown">
                 <a>Resources ▾</a>
                 <div class="dropdown-content">
-                    <a href="404.html">Calendar</a>
-                    <a href="404.html">Chat</a>
-                    <a href="404.html">Python Compiler</a>
+                    <a href="calendar.html">Calendar</a>
+                    <a href="chat.html">Chat</a>
+                    <a href="compiler.html">Python Compiler</a>
                 </div>
             </div>
             <a href="404.html">Contact</a>
