Seperate styles from files to a css file.

--- a/404.html
+++ b/404.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JMS Coding Club</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="navbar.css" rel="stylesheet">
     <!-- <link href="admin/thesheet.css" rel="stylesheet"> -->
     <style>
         body {
@@ -107,59 +108,6 @@
         
         .function-button {
             margin-top: 20px;
-        }
-
-        .navbar {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: #01317d;
-            padding: 0 20px;
-            height: 60px;
-        }
-
-        .navbar .logo {
-            color: white;
-            font-size: 1.5em;
-            font-weight: bold;
-            text-decoration: none;
-        }
-
-        .navbar .nav-items {
-            display: flex;
-            align-items: center;
-        }
-
-        .navbar a {
-            color: white;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
-
-        .navbar a:hover {
-            background-color: #575757;
-        }
-
-        .dropdown {
-            position: relative;
-        }
-
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #01317d;
-            min-width: 160px;
-            z-index: 1;
-            right: 0;
-        }
-
-        .dropdown-content a {
-            display: block;
-            padding: 12px 16px;
-        }
-
-        .dropdown:hover .dropdown-content {
-            display: block;
         }
     </style>
 </head>
