Add links to navbar stylesheet.

--- a/calendar.html
+++ b/calendar.html
@@ -6,6 +6,7 @@
     <title>JMS Coding Club Calendar</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="navbar.css" rel="stylesheet">
 
     <style>
         /* --- GENERAL PAGE AND BANNER STYLES (from your provided code) --- */
