--- a/chat.html
+++ b/chat.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Coding Club Chat</title>
+    <link href="navbar.css" rel="stylesheet">
         <style>
         body {
             margin: 0;
