Navbar changing: Phase 1

--- a/about_club.html
+++ b/about_club.html
@@ -154,35 +154,35 @@
     </style>
 </head>
 <body>
-    <div class="banner">
-        <p>JMS Coding Club</p>
-        <div class="dropdown-container-in-banner">
-            <select>
-                <option value="">Projects</option>
-                <option value="Our Current Project">Our Current Project</option>
-                <option value="Python Fundamentals">Python Fundamentals</option>
-                <option value="Past Projects">Past Projects</option>
-            </select>
-
-            <select>
-                <option value="">About Us</option>
-                <option value="mission">What Are We Doing</option>
-                <option value="team">Our Team</option>
-            </select>
-
-            <select>
-                <option value="">Contact Us</option>
-                <option value="contacts">Contacts</option>
-            </select>
-
-            <select>
-                <option value="">Resources</option>
-                <option value="Our Current Project">Calender</option>
-                <option value="Python Compiler">Chat</option>
-                <option value="Python Compiler">Python Compiler</option>
-            </select>
+    <div class="navbar">
+        <a class="logo" href="index.html">JMS Coding Club</a>
+        <div class="nav-items">
+            <div class="dropdown">
+                <a>About Us ▾</a>
+                <div class="dropdown-content">
+                    <a href="about_club.html">What We're Doing</a>
+                    <a href="about-us.html">Our Team</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <a>Projects ▾</a>
+                <div class="dropdown-content">
+                    <a href="current_project.html">Our Current Project</a>
+                    <a href="python_fundementals.html">Python Fundamentals</a>
+                    <a href="past_projects.html">Past Projects</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <a>Resources ▾</a>
+                <div class="dropdown-content">
+                    <a href="calendar.html">Calendar</a>
+                    <a href="chat.html">Chat</a>
+                    <a href="compiler.html">Python Compiler</a>
+                </div>
+            </div>
+            <a href="404.html">Contact</a>
         </div>
-        </div>
+    </div>
     <div class="container">
         <h1>What We Do</h1>
         <p>This is were I provide I discription for the club</p>
